Update tracking files

--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,8 @@ wp-content/plugins/*
 # Ignore everything in the "themes" directory, except the themes you
 # specify (see the commented-out example for a hint on how to do this.)
 wp-content/themes/*
-# !wp-content/themes/my-theme/
+!wp-content/themes/Newspaper-child/
+
+#List of files we should track
+!wp-config.example.php
+!README.md
