--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# Ignore everything in the root except the "wp-content" directory.
-/*
-!.gitignore
-!wp-content/
-
 # Ignore everything in the "wp-content" directory, except the "plugins"
 # and "themes" directories.
 wp-content/*
@@ -12,7 +7,6 @@ wp-content/*
 # Ignore everything in the "plugins" directory, except the plugins you
 # specify (see the commented-out examples for hints on how to do this.)
 wp-content/plugins/*
-# !wp-content/plugins/my-single-file-plugin.php
 !wp-content/plugins/rabbit-ajax-login-register/
 
 # Ignore everything in the "themes" directory, except the themes you
@@ -24,3 +18,6 @@ wp-content/themes/*
 #List of files we should track
 !wp-config.example.php
 !README.md
+
+wp-config.php
+*.sql
