--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "private": true,
   "devDependencies": {
     "browser-sync": "^2.11.0",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-sourcemap": "^1.3.1",
+    "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "^1.6.0"
   },
   "dependencies": {}
 }
